Some commands in the macro assembler were flipped.  Make them all uniform. (bug 723359, r=jbramley)